--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ INFURA_KEY = "INFURA PROJECT ID"
 ETHERSCAN_KEY = "ETHERSCAN API KEY"
 BSCSCAN_KEY = "BSCSCAN API KEY"
 COINMARKETCAP_KEY = "COINMARKETCAP API KEY"
+
+CONFIRMATIONS = "CONFIRMATIONS COUNT"
+VERIFY = "IS VERIFY"
+
+# Available targets: 'ethers-v5', 'truffle-v5' and 'web3-v1'
+# By default 'ethers-v5'
+TYPECHAIN_TARGET = "TYPECHAIN TARGET"
