--- a/package.json
+++ b/package.json
@@ -14,26 +14,31 @@
     "private-network-fork": "npx hardhat node --fork https://mainnet.infura.io/v3/$(grep INFURA_KEY .env | cut -d '\"' -f2)",
     "deploy-dev": "npx hardhat run deploy/runners/deployer/migrations.js --network localhost",
     "deploy": "npx hardhat run deploy/runners/deployer/migrations.js --network",
+    "generate-types": "npx hardhat typechain",
     "lint-fix": "npm run lint-sol-fix && npm run lint-js-fix && npm run lint-json-fix",
     "lint-json-fix": "prettier --write \"./[a-zA-Z0-9.]+(?!-lock).json\"",
     "lint-js-fix": "prettier --write \"./**/*.js\"",
     "lint-sol-fix": "prettier --write \"contracts/**/*.sol\""
   },
   "dependencies": {
+    "@dlsl/dev-modules": "^1.7.0",
     "@openzeppelin/contracts": "4.5.0",
     "@openzeppelin/contracts-upgradeable": "4.5.0",
-    "@dlsl/dev-modules": "^1.7.0",
-    "eth-sig-util": "^3.0.1",
     "dotenv": "^10.0.0",
-    "hardhat": "^2.11.0"
+    "hardhat": "^2.11.0",
+    "typechain": "^8.1.0"
   },
   "devDependencies": {
+    "@metamask/eth-sig-util": "^4.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/truffle-v5": "^8.0.1",
+    "@typechain/web3-v1": "^6.0.1",
+    "@typechain/hardhat": "^6.1.3",
     "@truffle/deployer": "3.2.56",
     "@truffle/reporters": "1.1.2",
-    "@metamask/eth-sig-util": "^4.0.0",
     "bignumber.js": "^9.0.1",
     "chai": "^4.3.4",
     "hardhat-contract-sizer": "^2.6.1",
