--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@openzeppelin/contracts": "4.5.0",
     "@openzeppelin/contracts-upgradeable": "4.5.0",
     "dotenv": "^10.0.0",
+    "eth-sig-util": "^3.0.1",
     "hardhat": "^2.11.0",
     "typechain": "^8.1.0"
   },
@@ -33,12 +34,12 @@
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@typechain/ethers-v5": "^10.1.0",
-    "@typechain/truffle-v5": "^8.0.1",
-    "@typechain/web3-v1": "^6.0.1",
-    "@typechain/hardhat": "^6.1.3",
     "@truffle/deployer": "3.2.56",
     "@truffle/reporters": "1.1.2",
+    "@typechain/ethers-v5": "^10.1.0",
+    "@typechain/hardhat": "^6.1.3",
+    "@typechain/truffle-v5": "^8.0.1",
+    "@typechain/web3-v1": "^6.0.1",
     "bignumber.js": "^9.0.1",
     "chai": "^4.3.4",
     "hardhat-contract-sizer": "^2.6.1",
@@ -49,8 +50,8 @@
     "prettier-plugin-solidity": "^1.0.0-beta.24",
     "solhint": "^3.3.7",
     "solhint-plugin-prettier": "^0.0.5",
-    "truffle-assertions": "^0.9.2",
     "solidity-coverage": "^0.8.1",
+    "truffle-assertions": "^0.9.2",
     "web3": "^1.7.5"
   }
 }
