--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "private-network": "npx hardhat node",
     "private-network-fork": "npx hardhat node --fork https://mainnet.infura.io/v3/$(grep INFURA_KEY .env | cut -d '\"' -f2)",
     "deploy-dev": "npx hardhat run deploy/runners/deployer/migrations.js --network localhost",
-    "deploy": "npx hardhat run deploy/runners/deployer/migrations.js --network",
-    "generate-types": "npx hardhat typechain",
+    "deploy-goerli": "CONFIRMATIONS=5 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network goerli",
+    "deploy-chapel": "CONFIRMATIONS=1 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network chapel",
+    "deploy-eth-mainnet": "CONFIRMATIONS=5 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network eth_mainnet",
+    "deploy-bsc-mainnet": "CONFIRMATIONS=2 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network bsc_mainnet",
+    "generate-types": "TYPECHAIN_FORCE=true npx hardhat typechain",
     "lint-fix": "npm run lint-sol-fix && npm run lint-js-fix && npm run lint-json-fix",
     "lint-json-fix": "prettier --write \"./[a-zA-Z0-9.]+(?!-lock).json\"",
     "lint-js-fix": "prettier --write \"./**/*.js\"",
