--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "private-network-fork": "npx hardhat node --fork https://mainnet.infura.io/v3/$(grep INFURA_KEY .env | cut -d '\"' -f2)",
     "deploy-dev": "npx hardhat run deploy/runners/deployer/migrations.js --network localhost",
     "deploy-goerli": "CONFIRMATIONS=5 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network goerli",
-    "deploy-chapel": "CONFIRMATIONS=1 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network chapel",
+    "deploy-mumbai": "CONFIRMATIONS=3 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network mumbai",
     "deploy-eth-mainnet": "CONFIRMATIONS=5 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network eth_mainnet",
-    "deploy-bsc-mainnet": "CONFIRMATIONS=2 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network bsc_mainnet",
+    "deploy-polygon_mainnet": "CONFIRMATIONS=3 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network polygon_mainnet",
     "generate-types": "TYPECHAIN_FORCE=true npx hardhat typechain",
     "lint-fix": "npm run lint-sol-fix && npm run lint-js-fix && npm run lint-json-fix",
     "lint-json-fix": "prettier --write \"./[a-zA-Z0-9.]+(?!-lock).json\"",
