--- a/package.json
+++ b/package.json
@@ -12,11 +12,11 @@
     "test-all": "npm run deploy-dev && npm run test",
     "private-network": "npx hardhat node",
     "private-network-fork": "npx hardhat node --fork https://mainnet.infura.io/v3/$(grep INFURA_KEY .env | cut -d '\"' -f2)",
-    "deploy-dev": "npx hardhat run deploy/runners/deployer/migrations.js --network localhost",
-    "deploy-goerli": "CONFIRMATIONS=5 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network goerli",
-    "deploy-mumbai": "CONFIRMATIONS=5 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network mumbai",
-    "deploy-eth-mainnet": "CONFIRMATIONS=5 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network eth_mainnet",
-    "deploy-polygon_mainnet": "CONFIRMATIONS=5 VERIFY=true npx hardhat run deploy/runners/deployer/migrations.js --network polygon_mainnet",
+    "deploy-localhost": "npx hardhat migrate --network localhost",
+    "deploy-goerli": "npx hardhat migrate --network goerli --verify --confirmations 4",
+    "deploy-mumbai": "npx hardhat migrate --network mumbai --verify --confirmations 7",
+    "deploy-ethereum": "npx hardhat migrate --network ethereum --verify --confirmations 4",
+    "deploy-polygon": "npx hardhat migrate --network polygon --verify --confirmations 5",
     "generate-types": "TYPECHAIN_FORCE=true npx hardhat typechain",
     "lint-fix": "npm run lint-sol-fix && npm run lint-js-fix && npm run lint-json-fix",
     "lint-json-fix": "prettier --write \"./[a-zA-Z0-9.]+(?!-lock).json\"",
@@ -32,12 +32,11 @@
     "typechain": "^8.1.0"
   },
   "devDependencies": {
+    "@dlsl/hardhat-migrate": "^1.4.0",
     "@metamask/eth-sig-util": "^4.0.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-truffle5": "^2.0.7",
     "@nomiclabs/hardhat-web3": "^2.0.0",
-    "@truffle/deployer": "3.2.56",
-    "@truffle/reporters": "1.1.2",
     "@typechain/ethers-v5": "^10.1.0",
     "@typechain/hardhat": "^6.1.3",
     "@typechain/truffle-v5": "^8.0.1",
