--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "deploy-localhost": "npx hardhat migrate --network localhost",
     "deploy-goerli": "npx hardhat migrate --network goerli --verify --confirmations 4",
     "deploy-mumbai": "npx hardhat migrate --network mumbai --verify --confirmations 7",
-    "deploy-ethereum": "npx hardhat migrate --network ethereum --verify --confirmations 4",
-    "deploy-polygon": "npx hardhat migrate --network polygon --verify --confirmations 5",
+    "deploy-qtestnet": "npx hardhat migrate --network qtestnet --attempts 3 --verify --confirmations 7",
+    "deploy-ethereum": "npx hardhat migrate --network ethereum --verify --attempts 3 --confirmations 4",
+    "deploy-polygon": "npx hardhat migrate --network polygon",
+    "deploy-qmainnet": "npx hardhat migrate --network qmainnet --verify --attempts 3 --confirmations 10",
     "generate-types": "TYPECHAIN_FORCE=true npx hardhat typechain",
     "lint-fix": "npm run lint-sol-fix && npm run lint-js-fix && npm run lint-json-fix",
     "lint-json-fix": "prettier --write \"./[a-zA-Z0-9.]+(?!-lock).json\"",
